--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    margin:0;
+}
+
 .flexContainer{
     display: flex;
 }
@@ -16,3 +20,9 @@ input:invalid{
     border: 1px solid red;
 }
 
+#image{
+    background-image: url(./sjoukje-bos-RMQKJCHhWBg-unsplash.jpg);
+    background-size: cover;
+    height: 1000px;
+    width: 40%;
+}
