--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body{
     flex-shrink: 0;
 }
 
+form{
+    box-shadow: 2px 2px 10px grey;
+}
 
 label{
     letter-spacing: 0.25em;
@@ -86,7 +89,11 @@ input:invalid{
 
 #content{
     margin-top: 150px;
-    margin-left: 70px;
+    
+}
+
+#content>*{
+    padding-left: 70px;
 }
 
 button{
@@ -97,4 +104,5 @@ button{
     padding: 16px 50px;
     font-size: 16px;
     font-weight: bold;
+    margin-left: 70px;
 }
